# livekit-transient

./: .env.example  .gitignore  README.md  agent.py  claude.md  config.py  filler_manager.py  generate_filler_sounds.py  main.py  pyproject.toml
prompts/: cartesia_emotion_config.json  emotion_config.json  filler_sounds_config.json  insurance_salesman_prompt.md  system_prompt.md
